--- a/style.css
+++ b/style.css
@@ -86,15 +86,7 @@ a:hover
     position: absolute;
     margin-left: 40px;
 }
-@media only screen
- 
-and (min-device-width: 375px)
- 
-and (max-device-width: 667px)
- 
-and (-webkit-min-device-pixel-ratio: 2)
- 
-and (orientation: portrait){
+@media (min-width: 576px){
 #outerborder
 {
     border: 1px outset rgb(186, 194, 194);
