--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ a:hover
     position: absolute;
     margin-left: 40px;
 }
-@media (min-width: 320px) and (max-width: 576px){
+@media (max-width: 575.98px){
 #outerborder
 {
     border: 1px outset rgb(186, 194, 194);
