--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ a:hover
     border: 1px outset rgb(186, 194, 194);
     width: 280px;
     height: 500px;
+    position: relative;
     margin-left: 11%;
     margin-top: 5%;
     border-radius: 2px;
