--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ table td
         border: 1px outset grey;
             width: 300px;
             height: fit-content;
-            margin-left: 5%;
+            margin: auto;
             margin-top: 10%;
             border-radius: 2px;
         }
